fixed javafx sdk problem for jar file